
Brief summary :

- Added graphical Bochs debugger under Win32 host !
  - Thanks for Chourdakis Michael and Bruce Ewing.
- Many fixes in Bochs internal debugger and CPU instrumentation.
- Bugfixes for CPU emulation correctness.

Detailed change log :

- CPU and internal debugger
  - Support new Intel Atom(R) MOVBE instruction, to enable configure with
        --enable-movbe option
  - Implemented modern BIOSes mode limiting max reported CPUID function
    to 3 using .bochsrc CPU option. The mode is required in order to
    correctly install and boot WinNT.
  - Many bugfixes for CPU emulation correctness (both x86 and x86-64).
  - Updated CPU instrumentation callbacks.
  - Fixed Bochs internal debugger breakpoints/watchpoints handling.

- Configure and compile
  - Added ability to configure CPUID vendor/brand strings through .bochsrc
    (patch from @SF by Doug Reed).
  - Removed Peter Tattam's closed source external debugger interface from
    the code.
  - Added ability to choose Bochs log file name and Bochs debugger log file
    name from Bochs command line (using new -log and -dbglog options)

- BIOS
  - Added S3 (suspend to RAM) ACPI state to BIOS (patch by Gleb Natapov)

- I/O Devices
  - Hard drive / cdrom
    - PACKET-DMA feature now supported by all ATAPI commands
    - ATAPI command 0x1A added (based on the Qemu implementation)
  - I/O APIC
    - implemented I/O APIC device hardware reset
  - sb16
    - Added limited ALSA sound support on Linux (PCM/MIDI output)
    - FM synthesizer now usable with MIDI output (simple piano only)
      - Fixed OPL frequency to MIDI note translation
      - Fixed MIDI output command
  - keyboard
    - added keyboard controller commands 0xCA and 0xCB

- Misc
  - Updated Bochs TESTFORM to version 0.4

- SF patches applied
 [2307269] acpi: handle S3 by Sebastian
 [2354134] TAP networking on Solaris/Sparc repaired
 [2144692] The scsi device can not complete its writing data command by naiyue